--- a/report.Rmd
+++ b/report.Rmd
@@ -10,6 +10,7 @@ geometry: a4paper, left=1.5cm, right=1.5cm, top=2.5cm, bottom=2cm
 mainfont: "Calibri"
 header-includes: |
   \pagenumbering{arabic}
+  \usepackage{makecell}
   \usepackage{silence}
   \WarningsOff[fancyhdr]
   \usepackage{multirow}
